--- a/untitled0.ipynb
+++ b/untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPqO+ZG/0V7dPOZMrA8b11",
+      "authorship_tag": "ABX9TyNZJbIJWaYwZ6nr4DMb2CDe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,7 @@
         "id": "Gkdb3rej1hNH",
         "outputId": "e15b929a-467d-4931-f384-068ea118bda1"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -119,7 +119,7 @@
         "id": "zCZl75_j3ScR",
         "outputId": "8c96b588-d386-47bd-c89f-19124525b652"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,6 +172,107 @@
             "輸入姓名:kika\n",
             "kika 你好\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#python動態型別"
+      ],
+      "metadata": {
+        "id": "Mp1y1jZMCBrV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name=input(\"輸入姓名\")\n",
+        "name\n",
+        "name=100\n",
+        "name\n",
+        "type(name)\n",
+        "name=50.0\n",
+        "name\n",
+        "type(name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "glLSUrmsDDRj",
+        "outputId": "ddd0b3f8-a1da-480a-87a3-5d12e12fe380"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "輸入姓名kika\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#字串可以相加\n",
+        "#轉換型別"
+      ],
+      "metadata": {
+        "id": "4xO4v3V-KlHT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "width=input(\"輸入寬:\")\n",
+        "width\n",
+        "type(width)\n",
+        "width=float(width)\n",
+        "type(width)\n",
+        "length=input(\"輸入長:\")\n",
+        "length=float(length)\n",
+        "sql=width*length\n",
+        "sql"
+      ],
+      "metadata": {
+        "id": "KC-uhUAOKgAX",
+        "outputId": "6321e54a-e753-4de2-d1e7-7d7f330744ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "輸入寬:3\n",
+            "輸入長:5\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     }
