--- a/untitled0.ipynb
+++ b/untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZJbIJWaYwZ6nr4DMb2CDe",
+      "authorship_tag": "ABX9TyObtcIocWhnuPc1XFoWnIIv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -248,11 +248,11 @@
         "sql"
       ],
       "metadata": {
-        "id": "KC-uhUAOKgAX",
-        "outputId": "6321e54a-e753-4de2-d1e7-7d7f330744ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KC-uhUAOKgAX",
+        "outputId": "6321e54a-e753-4de2-d1e7-7d7f330744ae"
       },
       "execution_count": 6,
       "outputs": [
@@ -273,6 +273,79 @@
           },
           "metadata": {},
           "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "str1=\"小豬\"\n",
+        "str2=\"小貓\"\n",
+        "print(\"str1\"+\"str2\")\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "_X9BJ8LjK4h1",
+        "outputId": "60575c44-9df1-4e08-e3d8-985a369e36f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "str1str2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#標準函式庫 匯入\n"
+      ],
+      "metadata": {
+        "id": "om9P9zAdN_h5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "side1=float(input(\"輸入長邊:\"))\n",
+        "side2=float(input(\"輸入短邊:\"))\n",
+        "sql=\n"
+      ],
+      "metadata": {
+        "id": "nKRfUpFhOK-J",
+        "outputId": "2e68d023-c8cf-4614-832f-ef8d3e3b0f68",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "輸入長邊:20\n",
+            "輸入短邊:30\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "160000.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
         }
       ]
     }
