--- a/untitled0.ipynb
+++ b/untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObtcIocWhnuPc1XFoWnIIv",
+      "authorship_tag": "ABX9TyPGMxyH15d09puBHLhApq4X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,41 +29,136 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#註記123\n",
-        "##註記456"
+        "#2025 05 10 上課用"
       ],
       "metadata": {
-        "id": "hmO739nHQVSf"
+        "id": "Nz95BlNzxy1A"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ">學習程式\n",
+        "\n",
+        "1數學運算\n",
+        "\n",
+        "2流程控制"
+      ],
+      "metadata": {
+        "id": "b7WtiHfKx-wg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#python的比較運算子\n",
+        ">Python的比較運算子用來比較兩個值，並回傳布林值（True 或 False）。Python 支援以下主要的比較運算子：\n",
+        "\n",
+        "1.  < ：小於\n",
+        "\n",
+        "2.. <= ：小於等於\n",
+        "\n",
+        "3.  > ：大於\n",
+        "\n",
+        "4.  >= ：大於等於\n",
+        "\n",
+        "5.  == ：等於\n",
+        "\n",
+        "6.  != ：不等於\n",
+        "\n",
+        "7.  is ：判斷兩個物件是否為同一個物件（物件識別）\n",
+        "\n",
+        "8.  is not ：判斷兩個物件是否不是同一個物件"
+      ],
+      "metadata": {
+        "id": "fu_jp0Av0qE9"
       }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "5==5\n",
+        "5!=5\n",
+        "5 is 5.0\n",
+        "5 is not 5.0"
+      ],
       "metadata": {
-        "id": "PZbOX_z1ClwN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "794d370a-51f9-4069-dfda-a2bb6c096c91"
+        "id": "DiVFLWaa3I1j",
+        "outputId": "22fcab06-d806-4164-965c-a2bb4ca54f12"
       },
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
+          "name": "stderr",
           "text": [
-            "hello python\n"
+            "<>:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "<>:4: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+            "<>:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "<>:4: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+            "<ipython-input-8-261db3562ab9>:3: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+            "  5 is 5.0\n",
+            "<ipython-input-8-261db3562ab9>:4: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+            "  5 is not 5.0\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
         }
-      ],
-      "source": [
-        "print(\"hello python\")"
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "#python條件式\n",
+        "-單項式\n",
+        "\n",
+        "-雙向氏\n",
+        "##給我\n",
+        "-說明\n",
+        "\n",
+        "-小範例"
+      ],
       "metadata": {
-        "id": "lNCzwIjd1xUg"
+        "id": "wHL2WzIR510f"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#雙項\n",
+        "雙項式條件式\n",
+        "語法：\n",
+        "\n",
+        "if 條件:\n",
+        "    條件成立時執行的程式區塊\n",
+        "else:\n",
+        "    條件不成立時執行的程式區塊\n",
+        "說明：\n",
+        "雙項式條件式有兩個分支，當條件為True時執行if區塊，條件為False時執行else區塊，確保程式必定執行其中一個區塊。\n",
+        "\n",
+        "\n",
+        "#單項\n",
+        "單項式條件式\n",
+        "語法：\n",
+        "\n",
+        "if 條件:\n",
+        "    執行程式區塊\n",
+        "說明：\n",
+        "單項式條件式指的是只有一個判斷條件，當條件成立（True）時，執行縮排的程式區塊，否則不執行任何動作（無else部分）。這是最簡單的條件判斷。"
+      ],
+      "metadata": {
+        "id": "GcYZiJGw7uM9"
       },
       "execution_count": null,
       "outputs": []
@@ -71,97 +166,18 @@
     {
       "cell_type": "code",
       "source": [
-        "n=1+1*2+(2+3)**2\n",
-        "n"
+        "score=65\n",
+        "if score>=60:\n",
+        "  print(\"good job\")\n",
+        "else:\n",
+        "  print(\"u false\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Gkdb3rej1hNH",
-        "outputId": "e15b929a-467d-4931-f384-068ea118bda1"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "28"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#程式結構\n",
-        "#複合指定運算子\n"
-      ],
-      "metadata": {
-        "id": "NaXxJ23V19Nh"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "n=2+2*3+(1+2)**2\n",
-        "n+=10\n",
-        "n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zCZl75_j3ScR",
-        "outputId": "8c96b588-d386-47bd-c89f-19124525b652"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "27"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#內建function函示\n",
-        "#input()使用"
-      ],
-      "metadata": {
-        "id": "JBTtvroQ6TUe"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "XStFCo7N7jpA"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "name=input(\"輸入姓名:\")\n",
-        "print(name,\"你好\")\n"
-      ],
-      "metadata": {
-        "id": "VrB39zi-7eGl",
-        "outputId": "5e2f496b-a8e8-4994-fbde-0d1bb05b6738",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "kPVvCsw48Pcc",
+        "outputId": "34e12f99-6c9e-48d2-9d4f-97324f482394"
       },
       "execution_count": null,
       "outputs": [
@@ -169,8 +185,75 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "輸入姓名:kika\n",
-            "kika 你好\n"
+            "good job\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score=65\n",
+        "if score>=60:\n",
+        "  print(\"good job\")\n",
+        "print(\"process end\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tPAyf-Mv851B",
+        "outputId": "d514cd70-ee89-4d25-dac2-947aa09ac27c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "good job\n",
+            "process end\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#巢狀判斷\n"
+      ],
+      "metadata": {
+        "id": "16QLza7uA-LR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score=65\n",
+        "if score>=80:\n",
+        "  print(\"甲\")\n",
+        "else:\n",
+        "  if score<60:\n",
+        "    print(\"不及格\")\n",
+        "  else:\n",
+        "   print(\"乙\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3H7_jtlvBIcm",
+        "outputId": "c4be41f4-c1b8-4cba-a3f8-5a5258d48c75"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "乙\n"
           ]
         }
       ]
@@ -178,174 +261,42 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#python動態型別"
+        "#多項功能選擇"
       ],
       "metadata": {
-        "id": "Mp1y1jZMCBrV"
+        "id": "_wdUQop1IbNU"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "name=input(\"輸入姓名\")\n",
-        "name\n",
-        "name=100\n",
-        "name\n",
-        "type(name)\n",
-        "name=50.0\n",
-        "name\n",
-        "type(name)"
+        "score=99\n",
+        "if score<60:\n",
+        "  print(\"不及格\")\n",
+        "elif score<70:\n",
+        "  print(\"炳\")\n",
+        "elif score<80:\n",
+        "  print(\"乙\")\n",
+        "elif score<90:\n",
+        "  print(\"甲\")\n",
+        "else:\n",
+        "  print(\"優\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "glLSUrmsDDRj",
-        "outputId": "ddd0b3f8-a1da-480a-87a3-5d12e12fe380"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "輸入姓名kika\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "float"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#字串可以相加\n",
-        "#轉換型別"
-      ],
-      "metadata": {
-        "id": "4xO4v3V-KlHT"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "width=input(\"輸入寬:\")\n",
-        "width\n",
-        "type(width)\n",
-        "width=float(width)\n",
-        "type(width)\n",
-        "length=input(\"輸入長:\")\n",
-        "length=float(length)\n",
-        "sql=width*length\n",
-        "sql"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KC-uhUAOKgAX",
-        "outputId": "6321e54a-e753-4de2-d1e7-7d7f330744ae"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "輸入寬:3\n",
-            "輸入長:5\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "15.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "str1=\"小豬\"\n",
-        "str2=\"小貓\"\n",
-        "print(\"str1\"+\"str2\")\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "_X9BJ8LjK4h1",
-        "outputId": "60575c44-9df1-4e08-e3d8-985a369e36f6",
+        "id": "gOkoqppfIhGF",
+        "outputId": "8486bb78-1284-468b-92ef-1ac896906645",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "str1str2\n"
+            "優\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#標準函式庫 匯入\n"
-      ],
-      "metadata": {
-        "id": "om9P9zAdN_h5"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import math\n",
-        "side1=float(input(\"輸入長邊:\"))\n",
-        "side2=float(input(\"輸入短邊:\"))\n",
-        "sql=\n"
-      ],
-      "metadata": {
-        "id": "nKRfUpFhOK-J",
-        "outputId": "2e68d023-c8cf-4614-832f-ef8d3e3b0f68",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "輸入長邊:20\n",
-            "輸入短邊:30\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "160000.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
         }
       ]
     }
