--- a/untitled0.ipynb
+++ b/untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGMxyH15d09puBHLhApq4X",
+      "authorship_tag": "ABX9TyOx9MdoVFrxziOfAXxBfCrv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -283,11 +283,11 @@
         "  print(\"優\")"
       ],
       "metadata": {
-        "id": "gOkoqppfIhGF",
-        "outputId": "8486bb78-1284-468b-92ef-1ac896906645",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gOkoqppfIhGF",
+        "outputId": "8486bb78-1284-468b-92ef-1ac896906645"
       },
       "execution_count": 4,
       "outputs": [
@@ -296,6 +296,124 @@
           "name": "stdout",
           "text": [
             "優\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#邏輯運算\n",
+        "## and 同時 嚴格得到 true+true\n",
+        "##or 容易得到   true false"
+      ],
+      "metadata": {
+        "id": "DXyxdqJ6Klnk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "presure=92\n",
+        "if presure>=80:\n",
+        "  if presure<=120:\n",
+        "    print(\"good\")\n"
+      ],
+      "metadata": {
+        "id": "fcAYVrW0NhVV",
+        "outputId": "98115259-a9a4-44a3-bbfe-cf37df419ac7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "good\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "presure=70\n",
+        "if presure>=80 and presure<=120:\n",
+        "  print(\"good\")\n",
+        "else:\n",
+        "  print(\"bad\")\n"
+      ],
+      "metadata": {
+        "id": "xlhVfoomPZv4",
+        "outputId": "9474f3dd-4a18-41bc-c51f-875828225a1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "bad\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "presure=70\n",
+        "if presure<80 or presure>120:\n",
+        "  print(\"bad\")\n",
+        "else:\n",
+        "  print(\"good\")\n"
+      ],
+      "metadata": {
+        "id": "3cDxVb6XPwDt",
+        "outputId": "fd06be2d-a221-4452-a3bd-a51308320def",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "bad\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "presure=90\n",
+        "if not presure>=80 and presure<=120:\n",
+        "  print(\"bad\")\n",
+        "else:\n",
+        "  print(\"good\")"
+      ],
+      "metadata": {
+        "id": "xcL6WD5TQbPm",
+        "outputId": "aece0fa3-3334-4464-8fd7-a0e1a86a4378",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "good\n"
           ]
         }
       ]
