--- a/lesson11/lesson11_1.ipynb
+++ b/lesson11/lesson11_1.ipynb
@@ -5,23 +5,14 @@
    "execution_count": null,
    "id": "705b1df8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid decimal literal (3693639426.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mhttps://www.perplexity.ai/search/f834ba4a-c32d-48c7-bfc3-36ef4d2b6d11\u001b[39m\n                                                    ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid decimal literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# https://www.perplexity.ai/search/f834ba4a-c32d-48c7-bfc3-36ef4d2b6d11"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "3e741305",
    "metadata": {},
    "outputs": [
@@ -31,7 +22,7 @@
        "[15, 25, 35, 45, 55]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f3821325",
    "metadata": {},
    "outputs": [
@@ -61,7 +52,7 @@
        "array([15, 25, 35, 45, 55])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "e591a2e8",
    "metadata": {},
    "outputs": [
@@ -90,7 +81,7 @@
        "array([20, 30, 40])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +98,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
