--- a/lesson11/lesson11_2.ipynb
+++ b/lesson11/lesson11_2.ipynb
@@ -117,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
